# gegelati-pendulum-embedded

./: .gitignore  clear_inference_results.sh  commands.txt  install_packages.sh  startAllEnergyBenches.rb
PendulumEmbeddedSTMProject/: .cproject
PendulumEmbeddedSTMProject/Core/Inc/: main.h
PendulumEmbeddedSTMProject/Core/Inc/Benchmark/: Bench.h  INA219Bench.h  INA219Monitor.h  Monitor.h  PendulumINA219Bench.h  PendulumINA219Monitor.h  TimingBench.h
PendulumEmbeddedSTMProject/Core/Inc/Pendulum/: PendulumExecutionEnvironment.h  TPGGraph.h  TPGPrograms.h  TPGprograms.h  approximateComputingTools.h  seeds_nbActionsToTerminal.h
PendulumEmbeddedSTMProject/Core/Src/: main.cpp  mainEnergyBenchmark.cpp
PendulumEmbeddedSTMProject/Core/Src/Benchmark/: Bench.cpp  INA219Bench.cpp  INA219Monitor.cpp  Monitor.cpp  PendulumINA219Bench.cpp  PendulumINA219Monitor.cpp  TimeUnit.cpp  TimingBench.cpp
PendulumEmbeddedSTMProject/Core/Src/Pendulum/: PendulumExecutionEnvironment.cpp  TPGGraph.c  TPGPrograms.c  TPGprograms.c
PendulumEmbeddedSTMProject/Core/Src/Peripherals/: tim.c
PendulumEmbeddedSTMProject/ReleaseEnergyBench/: makefile  objects.list  sources.mk
PendulumEmbeddedSTMProject/ReleaseEnergyBench/Core/Src/: subdir.mk
PendulumEmbeddedSTMProject/ReleaseEnergyBench/Core/Src/Benchmark/: subdir.mk
PendulumEmbeddedSTMProject/ReleaseEnergyBench/Core/Src/Pendulum/: subdir.mk
PendulumEmbeddedSTMProject/ReleaseEnergyBench/Core/Src/Peripherals/: subdir.mk
PendulumEmbeddedSTMProject/ReleaseEnergyBench/Core/Startup/: subdir.mk
PendulumEmbeddedSTMProject/ReleaseEnergyBench/Drivers/STM32F4xx_HAL_Driver/Src/: subdir.mk
TPG/: README.md
Trainer-Generator/: CMakeLists.txt
Trainer-Generator/src/: PendulumLearningEnvironment.cpp  PendulumLearningEnvironment.h  approximateComputingTools.h  instructions.cpp  instructions.h  mainExecutionInfos.cpp  mainExecutionStats.cpp  mainGenerator.cpp  mainPreCalcul.cpp  mainSeedsGraphTraversal.cpp  mainTrainer.cpp  mainValidation.cpp  pendulum.cpp  pendulumLE.cpp  pendulumLE.h
scripts/: CallGraphLevelLogToJson.rb  README.md  generate_TPG.rb  generate_TPG.sh  generate_energy_plots.jl  graphLevelLogToJson.rb  instructionLevelLogToJson.rb  logToJson.rb  logToJsonEnergy.rb  start_code_generation.rb  start_execution_infos.rb  start_generation.rb  start_instrumentation.rb  start_pre_calcul.rb  start_training.rb  start_trainings.sh  start_validation.rb
scripts/estimation_model/: README.md  benchmarkUtils.py  compute_fidelity.py  consolidate_instruction_level_benchmarks.py  estimation_model_calcul.py  linear_reg.py  multipleExecutionsDistributionPlot.py  spearman.py  team_regression.py  team_regression_plot.py
scripts/estimation_model/poster_ACACES2024/: instruction_level_analysis_calcul.py  overlay_of_latency_distributions.py
scripts/poster_ACACES_2024/: benchmarkUtils.py  energybenchmarks.py  microbenchmarks.py  overlay_of_latency_distributions.py
